--- a/sputnik-ui/src/app/app.component.html
+++ b/sputnik-ui/src/app/app.component.html
@@ -3,7 +3,7 @@
     <i style="color:white" class='fas fa-sync fa-spin fa-7x'></i>
     <br>
     <br>
-    <h4 style="color: white">Espere por favor...</h4>
+    <h4 style="color: white">Espere por favor.</h4>
   </div>
 </ng-template>
 <block-ui [message]="" [template]="blockTemplate">
