--- a/sputnik-ui/src/app/views/dashboard/menu/sidebar/sidebar.component.scss
+++ b/sputnik-ui/src/app/views/dashboard/menu/sidebar/sidebar.component.scss
@@ -29,6 +29,7 @@ $menu-border-color: #EDF0F3;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   box-shadow: 0 1px 10px 0 rgba(164, 171, 179, 0.6);
+  margin-top: -20px;
 
   .list-group {
     a.list-group-item {
