--- a/sputnik-ui/src/app/views/dashboard/bienvenida/bienvenida.component.html
+++ b/sputnik-ui/src/app/views/dashboard/bienvenida/bienvenida.component.html
@@ -1,9 +1,9 @@
 <div>
   <div class="row">
-    <h1>Bienvenido</h1>
+    <h1>Bienvenido(a)</h1>
   </div>
   <div class="row">
-    <h2>Pasarela de pagos</h2>
+    <h2>Sputnik</h2>
   </div>
   <hr>
 </div>
