--- a/sputnik-ui/src/app/views/dashboard/dashboard.component.html
+++ b/sputnik-ui/src/app/views/dashboard/dashboard.component.html
@@ -3,5 +3,8 @@
 <app-sidebar [estadoMenu]="estaComprimido"></app-sidebar>
 
 <section class="main-container">
+  <div style="padding-top: 0px;padding-bottom: 15px;padding-left: 0px;padding-right: 0px;">
+
   <router-outlet></router-outlet>
+  </div>
 </section>
