--- a/sputnik-ui/src/app/views/dashboard/dashboard.component.scss
+++ b/sputnik-ui/src/app/views/dashboard/dashboard.component.scss
@@ -10,10 +10,10 @@
   box-shadow: 0 1px 10px 0 rgba(164, 171, 179, 0.6);
   margin-top: 70px;
   margin-left: 215px;
-  margin-right: 20px;
+  margin-right: 15px;
   overflow-x: hidden;
   overflow-y: auto;
-  height: 590px;
+  height: 87vh;
   bottom: 0;
 
 
