--- a/sputnik-ui/src/app/views/dashboard/menu/header/header.component.html
+++ b/sputnik-ui/src/app/views/dashboard/menu/header/header.component.html
@@ -8,7 +8,7 @@
     <i class="icon ion-navicon fa-menu-action" aria-hidden="true"></i>
   </button>
 
-  <img src="assets/images/logoTropicalTours.png" class="navbar-logo"/>
+  <img src="assets/images/logoMundial.png" class="navbar-logo"/>
 
   <div>
     <span class="navbar-brand">{{ tituloProyecto }}</span>
@@ -17,10 +17,7 @@
 
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto">
-      <li>
-        <span>&nbsp;&nbsp;</span>
-      </li>
-      <!--<li class="nav-item dropdown" ngbDropdown>
+      <li class="nav-item dropdown" ngbDropdown>
         <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
           <i class="fas fa-user"></i>&nbsp;&nbsp;{{ usuarioNombre }}<b class="caret"></b>
         </a>
@@ -30,7 +27,7 @@
             <i class="fas fa-power-off"></i>&nbsp;&nbsp;Salir
           </a>
         </div>
-      </li>-->
+      </li>
     </ul>
   </div>
 </nav>
